--- a/gtk-3.0/widgets/_header-bars.scss
+++ b/gtk-3.0/widgets/_header-bars.scss
@@ -89,6 +89,7 @@ headerbar {
     &.titlebutton {
       color: transparent;
       box-shadow: none;
+      border: none;
 
       &:hover,
       &:active,
